Better support for multiple agents on one box